src/style/sass/reusable/_base.scss
* {
    margin: 0;
    padding: 0;
    font-family: Raleway;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%

    // @media only screen and (max-width: $bp-large) {
    //     font-size: 50%;
    // }
}

body {
    font-family: 'Raleway', Raleway;
    font-weight: 400;
    line-height: 1.6;
    color: var(--color-grey-dark-2);

    min-height: 100vh;
    
}
body.modal-open { position: fixed; width: 100%; }


////////////////////////////////////////
// LOGO
.logo {
    height: 4rem;
    margin: 2rem;

}

.col-sm-6{
  padding-right: 0;
}

